added background color and text animation

--- a/style.css
+++ b/style.css
@@ -6,25 +6,143 @@
     font-variant:small-caps;
 }
 
+main{
+    background-image: linear-gradient(to top, rgb(2, 6, 61), rgba(255, 255, 255, 0));
+    height: 100vh;
+    width: 100vw;
+}
+
+ /* header{ 
+    background-image: linear-gradient(to bottom, rgb(2, 6, 61), rgba(253, 253, 253, 0));
+ } */
+
+h1 {
+    font-family: "georgia pro cond semibold", Georgia, 'Times New Roman', Times, serif;
+    font-weight:800;
+    font-size: 72px;
+    font-variant:small-caps;
+    font-style: oblique;
+    text-align: center;
+    margin-bottom: 0;
+    margin-bottom: -0.25em;
+    /* display: block; */
+    /* margin-left: auto;
+    margin-right: auto; */
+    cursor: pointer;
+    width: 100%;
+  }
+
+.gradient-text {
+/* Fallback: Set a background color. */
+background-color: #18044e;
+
+/* Create the gradient. */
+    background-image: linear-gradient(
+        90deg,
+        #ffffff,
+        #ffffff,
+        #ffffff,
+        #ffffff,
+        #ffffff,
+        #3f31be,
+        #3026be,
+        #1613a3,
+        #1922a3, 
+        #09139b,
+        #031d94,
+        #1f22c9, 
+        #3033db, 
+        #025afd, 
+        #1357f5, 
+        #395fac, 
+        #e0e0e0,
+        #ffffff,
+        #ffffff);
+
+/* Set the background size and repeat properties. */
+background-size: 100%;
+background-repeat:repeat;
+
+/* Use the text as a mask for the background. */
+/* This will show the gradient as a text color rather than element bg. */
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent; 
+
+/* Animate the text when loading the element. */
+    /* This animates it on page load and when hovering out. */
+    animation: rainbow-text-simple-animation 4.25s ease-in backwards;
+
+}
+
+.gradient-text:hover{
+    animation: rainbow-text-simple-animation-rev 3.0s ease-in forwards;
+}
+
+
+/* Move the background and make it smaller. */
+/* Animation shown when entering the page and after the hover animation. */
+@keyframes rainbow-text-simple-animation-rev {
+    0% {
+        background-size: 650%;
+    }
+    40% {
+        background-size: 650%;
+    }
+    100% {
+        background-size: 100%;
+    }
+}
+
+/* Move the background and make it larger. */
+/* Animation shown when hovering over the text. */
+@keyframes rainbow-text-simple-animation {
+    0% {
+        background-size: 100%;
+    }
+    80% {
+        background-size: 650%;
+    }
+    100% {
+        background-size: 650%;
+    }
+}
+    
+
 header{
     width:100%;
 }
 
-nav li{
+/* nav{
+    display: flex;
+    justify-content: space-around;
+} */
+
+nav{
+    font-size: 40px;
     display: inline;
     list-style-type:none;
-    margin: 0px 40px;
-    justify-content: center;
+    margin: 60px 0px;
+    display: flex;
+    justify-content: space-around;
+    /* justify-content: space-around; */
 }
 
-h1,
-h2 {
-  margin: 20px;
+nav a{
+    font-size: 40px;
+    display: inline;
+    justify-content: space-around;
+
+}
+
+h2{
+    font-size: 36px;
+    margin-left: 50px;
 }
 
 nav a{
     text-decoration:none;
     color:black;
+    font-weight: 600;
 }
 
 .text-center {
@@ -32,9 +150,16 @@ nav a{
   }
 
 /* Bio section */
-
+.bio{
+    margin-top:100px;
+    text-align: left;
+}
 
 /* Work Section */
+.work{
+    margin:200px 0px;
+    text-align: left;
+}
 
 #focus-project{
 
@@ -45,17 +170,27 @@ nav a{
 }
 
 /* Contact Section */
+.contact-info{
+    color:rgb(199, 199, 202);
+    margin-top: 400px;
+}
+
+
+.contact-info h2{
+    color: rgb(199, 199, 202);
+}
+
 .contact-info li{
     display: block;
     list-style-type:none;
-    margin: 10px 0px;
+    margin: 10px 15px;
     justify-content: right;
 }
 
 .contact-link a{
     text-decoration:none;
     font-weight: 700;
-    color:rgb(29, 14, 126);
+    color:rgb(242, 240, 255);
 }
 
 /* Adaptive media */
