--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 }
 
 main{
-    background-image: linear-gradient(to top, rgb(2, 6, 61), rgba(255, 255, 255, 0));
-    height: 100vh;
-    width: 100vw;
+    background-image: linear-gradient(to top, rgb(2, 6, 61), rgb(2, 6, 61),rgba(255, 255, 255, 0));
+    height: 100%;
+    width: 100%;
 }
 
  /* header{ 
@@ -34,84 +34,11 @@ h1 {
     width: 100%;
   }
 
-.gradient-text {
-/* Fallback: Set a background color. */
-background-color: #18044e;
-
-/* Create the gradient. */
-    background-image: linear-gradient(
-        90deg,
-        #ffffff,
-        #ffffff,
-        #ffffff,
-        #3f31be,
-        #3026be,
-        #1613a3,
-        #1922a3, 
-        #09139b,
-        #1922a3, 
-        #09139b,
-        #031d94,
-        #1f22c9, 
-        #031d94,
-        #1f22c9, 
-        #3033db, 
-        #025afd, 
-        #1357f5, 
-        #395fac, 
-        #e0e0e0,
-        #ffffff,        
-        #ffffff,
-        #ffffff,
-        #ffffff);
-
-/* Set the background size and repeat properties. */
-background-size: 100%;
-background-repeat:repeat;
-
-/* Use the text as a mask for the background. */
-/* This will show the gradient as a text color rather than element bg. */
--webkit-background-clip: text;
--webkit-text-fill-color: transparent; 
-
-/* Animate the text when loading the element. */
-    /* This animates it on page load and when hovering out. */
-    animation: rainbow-text-simple-animation 4.25s ease-in backwards;
-
-}
-
-.gradient-text:hover{
-    animation: rainbow-text-simple-animation-rev 3.0s ease-in forwards;
-}
+  h3{
+    font-size: 24px;
+  }
 
 
-/* Move the background and make it smaller. */
-/* Animation shown when entering the page and after the hover animation. */
-@keyframes rainbow-text-simple-animation-rev {
-    0% {
-        background-size: 650%;
-    }
-    40% {
-        background-size: 650%;
-    }
-    100% {
-        background-size: 100%;
-    }
-}
-
-/* Move the background and make it larger. */
-/* Animation shown when hovering over the text. */
-@keyframes rainbow-text-simple-animation {
-    0% {
-        background-size: 100%;
-    }
-    80% {
-        background-size: 650%;
-    }
-    100% {
-        background-size: 650%;
-    }
-}
     
 
 header{
@@ -155,17 +82,55 @@ nav a{
     text-align: center;
   }
 
-/* Bio section */
-.bio{
-    margin-top:100px;
-    text-align: left;
-}
 
 /* Work Section */
 .work{
     margin:200px 0px;
     text-align: left;
 }
+
+.creations{
+    display: flex; 
+    flex-direction:row;
+    flex-wrap: wrap; 
+    position: relative;
+    justify-content: center;
+
+}
+
+.project{
+    border: 2px solid black;
+    margin:10px;
+    margin-bottom: 50px;
+    border-radius: 5px;
+    height: 400px;
+    width: 400px;
+    display: flex;
+    flex-direction:row;
+    flex-wrap: wrap; 
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.focus-project{
+    height: 500px;
+    width: 500px;
+}
+
+.project-title{
+    border: 1px solid;
+    text-align: center;
+    border-radius: 15px;
+    position: absolute;
+    justify-content: center;
+    top:-20px;
+    /* left:0px; */
+    padding: 5px;
+    background-color: rgb(94, 89, 89);
+    z-index: 1;
+}
+
 
 #focus-project{
 
@@ -175,12 +140,17 @@ nav a{
 
 }
 
+/* Bio section */
+.bio{
+    margin-top:100px;
+    text-align: left;
+}
+
 /* Contact Section */
 .contact-info{
     color:rgb(199, 199, 202);
     margin-top: 400px;
 }
-
 
 .contact-info h2{
     color: rgb(199, 199, 202);
@@ -198,6 +168,86 @@ nav a{
     font-weight: 700;
     color:rgb(242, 240, 255);
 }
+
+.gradient-text {
+    /* Fallback: Set a background color. */
+    background-color: #18044e;
+    
+    /* Create the gradient. */
+        background-image: linear-gradient(
+            90deg,
+            #ffffff,
+            #ffffff,
+            #ffffff,
+            #3f31be,
+            #3026be,
+            #1613a3,
+            #1922a3, 
+            #09139b,
+            #1922a3, 
+            #09139b,
+            #031d94,
+            #1f22c9, 
+            #031d94,
+            #1f22c9, 
+            #3033db, 
+            #025afd, 
+            #1357f5, 
+            #395fac, 
+            #e0e0e0,
+            #ffffff,        
+            #ffffff,
+            #ffffff,
+            #ffffff);
+    
+    /* Set the background size and repeat properties. */
+    background-size: 100%;
+    background-repeat:repeat;
+    
+    /* Use the text as a mask for the background. */
+    /* This will show the gradient as a text color rather than element bg. */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    
+    /* Animate the text when loading the element. */
+        /* This animates it on page load and when hovering out. */
+        animation: rainbow-text-simple-animation 4.25s ease-in backwards;
+    
+    }
+    
+    .gradient-text:hover{
+        animation: rainbow-text-simple-animation-rev 3.0s ease-in forwards;
+    }
+    
+    
+    /* Move the background and make it smaller. */
+    /* Animation shown when entering the page and after the hover animation. */
+    @keyframes rainbow-text-simple-animation-rev {
+        0% {
+            background-size: 650%;
+        }
+        40% {
+            background-size: 650%;
+        }
+        100% {
+            background-size: 100%;
+        }
+    }
+    
+    /* Move the background and make it larger. */
+    /* Animation shown when hovering over the text. */
+    @keyframes rainbow-text-simple-animation {
+        0% {
+            background-size: 100%;
+        }
+        80% {
+            background-size: 650%;
+        }
+        100% {
+            background-size: 650%;
+        }
+    }
+
 
 /* Adaptive media */
 
