--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -14,6 +14,7 @@
  
 body{
     width: 100%;
+    min-width: 500px;
 }
 
 /* Dark blue to white, top to bottom. */
@@ -102,6 +103,9 @@ main{
 /* Container with focus project */
 .projects-highlight-pane{
     display: flex;
+    min-width: 0;
+    flex-grow: 0;
+    flex-shrink: 1;
 }
 
 /* The two panels on either side of the focus project will be vertically aligned. */
@@ -112,6 +116,9 @@ main{
     position: relative;
     justify-content: center;
     align-items: center;
+    min-width: 0;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 /* This moves one of the panes to the left of the focus pane so that focus project is centered. Media query will undo this at smaller display size*/
@@ -132,20 +139,27 @@ main{
     justify-content: center;
     align-items: center;
     position: relative;
+    min-width: 0;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 .project img{
     height: 250px;
+    min-width: 100px;
+    border-radius: var(--border-radius);
 }
 
 /* Enlarges the focus project card */
 .focus-project{
     height: 400px;
     width: 400px;
+    min-width: 0;
 }
 
 .focus-project img{
     height: 350px;
+    min-width: 200px;
 }
 
 /* Overlay with project description */
@@ -158,6 +172,7 @@ main{
     bottom: 10px;
     padding: 5px;
     background-color: var(--light-gray);
+    min-width: 0;
 }
 
 /* Hover creates highlight around project card.*/
@@ -176,14 +191,16 @@ main{
     text-align: left;
     color: var(--light-gray);
     align-items: center;
+*/
 }
 
 .bio p{
     font-size: 22px;
-    width: 90%;
+    width: 95%;
     line-height: 1.2;
     text-align: justify;
     margin-left: 50px;
+    padding-right: 50px; 
 }
 
 /* Contact Section */
@@ -267,7 +284,7 @@ main{
 
         /* Tablets and smaller - Title name stacks vertically and section headings and contact info align centrally. Dark section of header expands to provide background for light Title*/
 
-        @media screen and (max-width: 1244px) {
+        @media screen and (max-width: 1300px) {
             /* Aligns project cards vertically with Focus project on top*/
             
             .creations{
