--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -94,7 +94,7 @@ main{
     display: flex; 
     flex-flow:row wrap;
     position: relative;
-    justify-content: space-around;
+    justify-content: center;
     align-items:center;
     flex: 2;
 }
@@ -122,7 +122,6 @@ main{
 .project{
     /* border: var(--border); */
     margin:40px;
-    border-radius: var(--border-radius);
     height: 300px;
     width: 300px;
     display: flex;
@@ -134,6 +133,10 @@ main{
 
 .project img{
     height: 250px;
+    padding: 25px;
+    border: var(--border);
+    border-radius: var(--border-radius);
+
 }
 
 /* Enlarges the focus project card */
@@ -153,13 +156,13 @@ main{
     border-radius: var(--border-radius);
     position: absolute;
     justify-content: center;
-    bottom: 10px;
+    bottom: 30px;
     padding: 5px;
     background-color: var(--light-gray);
 }
 
 /* Hover creates highlight around project card.*/
- .project:hover{
+ .project:hover img{
     box-shadow: inset 2px 2px 20px rgb(0, 0, 255), 2px 2px 20px rgb(0, 0, 255); 
 }
 
