--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -14,6 +14,7 @@
  
 body{
     width: 100%;
+    min-width: 500px;
 }
 
 /* Dark blue to white, top to bottom. */
@@ -177,14 +178,21 @@ main{
     text-align: left;
     color: var(--light-gray);
     align-items: center;
+    margin-left: 60px;
+    margin-right: 20px;
+}
+
+.bio .section-heading{
+    margin-left: 0px;
 }
 
 .bio p{
     font-size: 22px;
-    width: 90%;
+    width: 95%;
     line-height: 1.2;
     text-align: justify;
-    margin-left: 50px;
+    /* margin-left: 50px; */
+    /* margin-right: 30px; */
 }
 
 /* Contact Section */
@@ -192,7 +200,8 @@ main{
     color:var(--light-gray);
     margin-top: 300px;
     position: relative;
-    bottom: 100px
+    bottom: 100px;
+    margin-right: 40px;
 }
 
 .contact-info li{
@@ -300,6 +309,18 @@ main{
                 margin-left: 0px;
             }
 
+
+            .bio{
+                margin-left: 0;
+                /* margin-right: 20px;  */
+            }
+
+            .bio p{
+                margin-left: 40px;
+                padding-right: 30px; 
+            }
+
+
             /* Centrally aligns contact information */
             .contact-info{
                 text-align: center;
@@ -307,4 +328,58 @@ main{
             }
 
         }
-  
+
+        @media screen and (max-width: 600px) {
+           h1{
+            font-size: 50px;
+           }
+
+           h2{
+            font-size: 30px;
+           }
+
+            h3{
+                font-size: 16px;
+            }
+
+            h4{
+                font-size: 10px;
+            }
+            
+            .bio{
+                margin right: 80px;
+            }
+            .bio p{
+                font-size: 12px;
+ 
+
+            /* Shrinks Project cards*/
+            .project{
+                /* border: var(--border); */
+                margin: 40 px;
+                height: 150px;
+                width: 150px;
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+            }
+            
+            .project img{
+                height: 125px;
+                padding: 12.5px;
+                border: var(--border);
+                border-radius: var(--border-radius);
+            
+            }
+            
+            /* Enlarges the focus project card */
+            .focus-project{
+                height: 200px;
+                width: 200px;
+            }
+            
+            .focus-project img{
+                height: 175px;
+            }
