--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -191,8 +191,6 @@ main{
     width: 95%;
     line-height: 1.2;
     text-align: justify;
-    /* margin-left: 50px; */
-    /* margin-right: 30px; */
 }
 
 /* Contact Section */
@@ -303,12 +301,11 @@ main{
                 background-image: linear-gradient(to bottom, rgb(2, 6, 61), rgb(2, 6, 61), rgb(2, 6, 61), rgba(253, 253, 253, 0));
             }
 
-            /* Centrally aligns section headings */
+            /* Centrally aligns section headings and contents*/
            .section-heading{
                 text-align: center;
                 margin-left: 0px;
             }
-
 
             .bio{
                 margin-left: 0;
@@ -320,7 +317,6 @@ main{
                 padding-right: 30px; 
             }
 
-
             /* Centrally aligns contact information */
             .contact-info{
                 text-align: center;
@@ -328,15 +324,16 @@ main{
             }
 
         }
-
+        /* Shrink fonts for better viewing on smaller displays */
         @media screen and (max-width: 600px) {
-           h1{
-            font-size: 50px;
-           }
+           
+            h1{
+                font-size: 50px;
+            }
 
-           h2{
-            font-size: 30px;
-           }
+            h2{
+                font-size: 30px;
+            }
 
             h3{
                 font-size: 16px;
@@ -349,6 +346,7 @@ main{
             .bio{
                 margin right: 80px;
             }
+
             .bio p{
                 font-size: 12px;
  
@@ -373,8 +371,6 @@ main{
                 border-radius: var(--border-radius);
             
             }
-            
-            /* Enlarges the focus project card */
             .focus-project{
                 height: 200px;
                 width: 200px;
