Update LinkedIn URL and focus image size

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -148,6 +148,7 @@ main{
 
 .focus-project img{
     height: 350px;
+    width: 350px;
 }
 
 /* Overlay with project description */
@@ -377,6 +378,7 @@ main{
             
             .focus-project img{
                 height: 175px;
+                width: 175px;
             }
 
             .contact-info li{
